# fakeroot

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  README_MACOSX.txt  aclocal.m4  bootstrap  communicate-sysv.c  communicate-tcp.c  communicate.c  communicate.h  config.h.in  configure.ac  faked.c  index.html  libfakeroot.c  libfakeroot_inode64.c  libfakeroot_time64.c  libfakeroot_unix2003.c  message.h  patchattr.h  preroll  simple.c  wrapawk  wrapawk_macosx  wrapfunc.inp
debian/: changelog  control  copyright  fakeroot.docs  fakeroot.install  fakeroot.postinst  fakeroot.postinst.in  fakeroot.postrm.in  fakeroot.prerm  libfakeroot.docs  libfakeroot.install  libfakeroot.links.in  not-installed  rules  salsa-ci.yml  shlibs
debian/patches/: 0001-test-t.chown-test-for-__stat64_time64-on-32bit-arche.patch  Fix-FTBFS  eglibc-fts-without-LFS  fix-prototype-generation.patch  series  upstream-i18n.patch
debian/tests/: control  id  state
doc/: Makefile.am  faked.1  fakeroot.1
doc/de/: Makefile.am
doc/es/: Makefile.am  faked.1  fakeroot.1
doc/fr/: Makefile.am  fakeroot.1
doc/po4a/: addendum.1.de  addendum.1.pt  addendum.1.sv  po4a.cfg
doc/po4a/po/: de.po  es.po  fakeroot.pot  fr.po  nl.po  pt.po  sv.po
doc/pt/: Makefile.am
doc/sv/: Makefile.am
fake/: Makefile.am  configure  configure.ac
scripts/: Makefile.am  fakeroot.in
test/: Makefile.am  compare-tar  cp-atest  defs.in  t.chmod_dev  t.chown  t.cp-a  t.echoarg  t.falsereturn  t.mknod  t.no_ld_preload  t.no_ld_preload_link  t.option  t.tar  t.touchinstall  t.truereturn  t.xattr  tartest  tartest.tar.gz.uue
